--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=<%=process.env.REACT_APP_KAKAOMAP_API_KEY%>&libraries=drawing"></script>
     <title>MAPU</title>
   </head>
   <body>
